Update contact page, parts page formatting, application page (removed contact form), and updated contact page links

--- a/app/views/parts/automaticTrans.html.erb
+++ b/app/views/parts/automaticTrans.html.erb
@@ -87,5 +87,9 @@
                 <!--Grid column-->
             </div>
             <!--Grid row-->
-        </section>
+            </section>
+        </div>
+        
         <!--Section: Gallery-->
+    </main>
+   
