--- a/app/views/parts/differential.html.erb
+++ b/app/views/parts/differential.html.erb
@@ -84,5 +84,8 @@
                 <!--Grid column-->
             </div>
             <!--Grid row-->
-        </section>
+            </section>
+        </div>
+        
         <!--Section: Gallery-->
+    </main>
