--- a/app/views/parts/performance.html.erb
+++ b/app/views/parts/performance.html.erb
@@ -81,5 +81,8 @@
                 <!--Grid column-->
             </div>
             <!--Grid row-->
-        </section>
+            </section>
+        </div>
+        
         <!--Section: Gallery-->
+    </main>
