--- a/app/views/parts/standardTrans.html.erb
+++ b/app/views/parts/standardTrans.html.erb
@@ -83,5 +83,8 @@
                 <!--Grid column-->
             </div>
             <!--Grid row-->
-        </section>
+            </section>
+        </div>
+        
         <!--Section: Gallery-->
+    </main>
