--- a/app/views/parts/transferCase.html.erb
+++ b/app/views/parts/transferCase.html.erb
@@ -79,5 +79,8 @@
                 <!--Grid column-->
             </div>
             <!--Grid row-->
-        </section>
+            </section>
+        </div>
+        
         <!--Section: Gallery-->
+    </main>
