--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,7 @@
+<main class="mt-5">
+    <div class="container">
+        <!--Section: Examples-->
+        <hr class="my-5">
 <section id="contact">
                 <!-- Heading -->
                 <h2 class="mb-5 font-weight-bold text-center">Contact us</h2>
@@ -6,17 +10,27 @@
                     <!--Grid column-->
                     <div class="col-lg-5 col-md-12">
                         <!-- Form contact -->
-                        <div class="form">
+                        <form class="p-5">
 <%= simple_form_for @contact do |form| %>
 <%= form.error_notification %>
-<%= form.input :name, autofocus: true %>
-<%= form.input :email %>
-<%= form.input :phone %>
-<%= form.input :address %>
-<%= form.input :message, as: :text %>
-<%= form.button :submit, 'Submit', class: 'submit' %>
-<% end %>
+<div class="md-form form-sm"> <i class="fa fa-user prefix grey-text"></i>
+<%= form.input_field :name, placeholder: 'Name', autofocus: true, input_html: { class: 'form-control form-control-sm', type: 'text', id: 'form3' } %>
 </div>
+<div class="md-form form-sm"> <i class="fa fa-envelope prefix grey-text"></i>
+<%= form.input_field :email, placeholder: 'Email', input_html: { class: 'form-control form-control-sm', type: 'text', id: 'form4' } %>
+</div>
+<div class="md-form form-sm"> <i class="fa fa-phone prefix grey-text"></i>
+<%= form.input_field :phone, placeholder: 'Phone', input_html: { class: 'form-control form-control-sm', type: 'text', id: 'form5' } %>
+</div>
+<div class="md-form form-sm"> <i class="fa fa-home prefix grey-text"></i>
+<%= form.input_field :address, placeholder: 'Address', input_html: { class: 'form-control form-control-sm', type: 'text', id: 'form6' } %>
+</div>
+<div class="md-form form-sm"> <i class="fa fa-file-text-o prefix grey-text"></i>
+<%= form.input_field :message, as: :text, placeholder: 'Message', input_html: { class: "md-textarea form-control form-control-sm", type: 'text',rows:"4", id: 'form3' } %>
+</div>
+<%= form.button :submit, 'Submit', class: "btn btn-primary" %>
+<% end %>
+</form>
                         <!-- Form contact -->
                     </div>
                     <!--Grid column-->
@@ -60,3 +74,5 @@ Toll-Free: 1-800-929-5103</p>
                 </div>
                 <!--Grid row-->
             </section>
+        </div>
+            </main>
