--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
                            </div>
                         </li>
                         <li class="nav-item">
-                            <%= link_to "Contact", root_path, class: "nav-link" %>
+                            <%= link_to "Contact", new_contact_path, class: "nav-link" %>
                         </li>
                     </ul>
                     <!-- Links -->
@@ -67,10 +67,14 @@
                 <a class="nav-link" href="https://www.facebook.com/Nogalitos-Gear-125648054154933"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                <%= link_to new_contact_path, class: "nav-link waves-light" do %>
+                                <%= content_tag :i, "", :class => "fa fa-phone", :'aria-hidden' => "true" %>
+                                <% end %>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <%= link_to new_contact_path, class: "nav-link waves-light" do %>
+                                <%= content_tag :i, "", :class => "fa fa-envelope", :'aria-hidden' => "true" %>
+                                <% end %>
             </li>
         </ul>
         <%= link_to gearwizard_path, class: "navbar-brand" do %>
@@ -82,88 +86,7 @@
         </nav>
         <!--/.Navbar-->
     <%= yield %>
-    <hr class="my-5">
-            <!--Section: Contact-->
-            <section id="contact">
-                <!-- Heading -->
-                <h2 class="mb-5 font-weight-bold text-center">Contact us</h2>
-                <!--Grid row-->
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-lg-5 col-md-12">
-                        <!-- Form contact -->
-                        <form class="p-5">
-                        
-                            <div class="md-form form-sm"> <i class="fa fa-user prefix grey-text"></i>
-                                <input type="text" id="form3" class="form-control form-control-sm">
-                                <label for="form3">Your Fullame</label>
-                            </div>
-                            <div class="md-form form-sm"> <i class="fa fa-envelope prefix grey-text"></i>
-                                <input type="text" id="form2" class="form-control form-control-sm">
-                                <label for="form2">Your Email</label>
-                            </div>
-                            <div class="md-form form-sm"> <i class="fa fa-tag prefix grey-text"></i>
-                                <input type="text" id="form32" class="form-control form-control-sm">
-                                <label for="form34">Your Phone Number</label>
-                            </div>
-                            <div class="md-form form-sm"> <i class="fa fa-tag prefix grey-text"></i>
-                                <input type="text" id="form32" class="form-control form-control-sm">
-                                <label for="form34">Your Address (Optional)</label>
-                            </div>
-                            <div class="md-form form-sm"> <i class="fa fa-pencil prefix grey-text"></i>
-                                <textarea type="text" id="form8" class="md-textarea form-control form-control-sm" rows="4"></textarea>
-                                <label for="form8">Your message</label>
-                            </div>
-                            <div class="text-center mt-4">
-                                <button class="btn btn-primary">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
-                            </div>
-                        </form>
-                        <!-- Form contact -->
-                    </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <div class="col-lg-7 col-md-12">
-                        <!--Grid row-->
-                        <div class="row text-center">
-                            <!--Grid column-->
-                            <div class="col-lg-4 col-md-12 mb-3">
-                                <p>
-                                    <i class="fa fa-map fa-1x mr-2 grey-text"></i> 433 New Laredo Hwy.
-San Antonio, TX 78211 </p>
-                            </div>
-                            <!--Grid column-->
-                            <!--Grid column-->
-                            <div class="col-lg-4 col-md-6 mb-3">
-                                <p>
-                                    <i class="fa fa-building fa-1x mr-2 grey-text"></i>
-M-F:
-    8:00 am - 5:30 pm 
-Sat:
-    9:00 am - 1:00 pm <br>
-Sun:
-    Closed
-</p>
-                            </div>
-                            <!--Grid column-->
-                            <!--Grid column-->
-                            <div class="col-lg-4 col-md-6 mb-3">
-                                <p>
-                                    <i class="fa fa-phone fa-1x mr-2 grey-text"></i>Tel: 210-923-4571 <br>
-Toll-Free: 1-800-929-5103</p>
-                            </div>
-                            <!--Grid column-->
-                        </div>
-                        <!--Grid row-->
-                        <!--Google map-->
-                        <div id="map-container" class="z-depth-1-half map-container mb-5" style="height: 400px"></div>
-                    </div>
-                    <!--Grid column-->
-                </div>
-                <!--Grid row-->
-            </section>
-            <!--Section: Contact-->
-        </div>
-    </main>
+    
     <!--Main layout-->
     
     <!-- SCRIPTS -->
