--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -22,17 +22,17 @@
                         <div class="carousel-inner z-depth-1-half" role="listbox">
                             <!--First slide-->
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/Allison_1000.png" alt="First slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/Dennis.jpg" alt="First slide">
                             </div>
                             <!--/First slide-->
                             <!--Second slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/autoclutches.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/Shop.jpg" alt="Second slide">
                             </div>
                             <!--/Second slide-->
                             <!--Third slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/86.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/counter.jpg" alt="Third slide">
                             </div>
                             <!--/Third slide-->
                         </div>
