--- a/app/views/info/suppliers.html.erb
+++ b/app/views/info/suppliers.html.erb
@@ -26,11 +26,11 @@
                                 </div>
                                 <!--Second slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/precisionLogo.jpg" alt="Second slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/rrp-yesaxle_6852.jpg" alt="Second slide">
                                 </div>
                                 <!--Third slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/raybestosLogo.jpg" alt="Third slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/yukonLogoDiff.jpeg" alt="Third slide">
                                 </div>
                                 <!--/Third slide-->
                             </div>
