--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -36,14 +36,14 @@
                     <!-- Links -->
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <%= link_to "Home", root_path, class: "nav-link" %>
+                            <%= link_to "Home", root_path, class: "nav-link", turbolinks: false %>
                                 <span class="sr-only">(current)</span>
                         </li>
                         <li class="nav-item">
-                            <%= link_to "About", about_path, class: "nav-link" %>
+                            <%= link_to "About", about_path, class: "nav-link", turbolinks: false %>
                         </li>
                         <li class="nav-item">
-                            <%= link_to "Suppliers", suppliers_path, class: "nav-link" %>
+                            <%= link_to "Suppliers", suppliers_path, class: "nav-link", turbolinks: false %>
                         </li>
                         <!-- Dropdown -->
                         <li class="nav-item dropdown">
@@ -86,7 +86,7 @@
         </nav>
         <!--/.Navbar-->
     <%= yield %>
-    
+    </body>
     <!--Main layout-->
     
     <!-- SCRIPTS -->
@@ -138,5 +138,4 @@
         interval: 3000,
     })
     </script>
-  </body>
 </html>
