--- a/app/views/parts/automaticTrans.html.erb
+++ b/app/views/parts/automaticTrans.html.erb
@@ -31,12 +31,12 @@
                             <!--/First slide-->
                             <!--Second slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://s3.amazonaws.com/pics-ngparts-bucket/autoclutches.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/automatic-transmission-truck-section-260nw-720456715.jpg" alt="Second slide">
                             </div>
                             <!--/Second slide-->
                             <!--Third slide-->
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Others/images/86.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/Transmission-Altogether-1.jpg" alt="Third slide">
                             </div>
                             <!--/Third slide-->
                         </div>
