--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -18,10 +18,10 @@
             </div>
         </div>
         <!--/.Mask-->
-    </header>
+
     <!--Main Navigation-->
     <!--Main layout-->
-    <main class="mt-5">
+    <div class="mt-5">
         <div class="container">
             <!--Section: Best Features-->
             <section id="best-features" class="text-center">
@@ -168,11 +168,11 @@
                                 </div>
                                 <!--Second slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/precisionLogo.jpg" alt="Second slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/rrp-yesaxle_6852.jpg" alt="Second slide">
                                 </div>
                                 <!--Third slide-->
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/raybestosLogo.jpg" alt="Third slide">
+                                    <img class="d-block w-100" src="https://s3.amazonaws.com/ngpwebsite/ngpimages/yukonLogoDiff.jpeg" alt="Third slide">
                                 </div>
                                 <!--/Third slide-->
                             </div>
@@ -215,7 +215,7 @@
                 </div>
             </section>
             <!--Section: Gallery-->
-        </main>
+        </div>
 
             
 
