--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -2,7 +2,7 @@
         <!--Mask-->
         <div id="intro" class="view mt-5">
             <div class="mask rgba-black-strong">
-                <div class="container-fluid d-flex align-items-center justify-content-center h-100">
+                <div class="container d-flex align-items-center justify-content-center h-100">
                     <div class="row d-flex justify-content-center text-center">
                         <div class="col-md-10">
                             <!-- Heading -->
