--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,7 +4,7 @@
             <div class="mask rgba-black-strong">
                 <div class="container d-flex align-items-center justify-content-center h-100">
                     <div class="row d-flex justify-content-center text-center">
-                        <div class="col-md-10">
+                        <div class="col-8">
                             <!-- Heading -->
                             <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">All You Need to Get In Gear!</h2>
                             <!-- Divider -->
