--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,22 +1,27 @@
     <%= stylesheet_link_tag("styleNGPLanding") %>
         <!--Mask-->
-        <div id="intro" class="view mt-5">
-            <div class="mask rgba-black-strong">
-                <div class="container d-flex align-items-center justify-content-center h-100">
-                    <div class="row d-flex justify-content-center text-center">
-                        <div class="col-8">
-                            <!-- Heading -->
-                            <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">All You Need to Get In Gear!</h2>
+        <div class="view" style="background-image: url('https://s3.amazonaws.com/ngpwebsite/automaticTrans.jpg'); background-repeat: no-repeat; background-size: cover;">
+
+          <!-- Mask & flexbox options-->
+          <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+
+            <!-- Content -->
+            <div class="text-center white-text mx-5 wow fadeIn">
+              <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">All You Need to Get In Gear!</h2>
                             <!-- Divider -->
                             <hr class="hr-light">
                             <!-- Description -->
                             <h4 class="white-text my-4">Your One Stop Shop for Automatic Transmission, Standard Transmission, Transfer Case, and Differential Parts</h4>
                             <button type="button" class="btn btn-outline-white">Check Our Parts Selection<i class="fa fa-book ml-2"></i></button>
-                        </div>
-                    </div>
-                </div>
+
             </div>
+            <!-- Content -->
+
+          </div>
+          <!-- Mask & flexbox options-->
+
         </div>
+
         <!--/.Mask-->
 
     <!--Main Navigation-->
