--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,10 +1,10 @@
     <%= stylesheet_link_tag("styleNGPLanding") %>
         <!--Mask-->
-        <div class="view" style="background-image: url('https://s3.amazonaws.com/ngpwebsite/automaticTrans.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <div class="view" style="height: 100%">
+        <div class="intro d-flex justify-content-center align-items-center" style="background-image: url('https://s3.amazonaws.com/ngpwebsite/automaticTrans.jpg'); background-repeat: no-repeat; background-size: cover;">
 
           <!-- Mask & flexbox options-->
-          <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
-
+        <div class="mask flex-center rgba-black-strong">
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">All You Need to Get In Gear!</h2>
@@ -17,11 +17,11 @@
             </div>
             <!-- Content -->
 
-          </div>
           <!-- Mask & flexbox options-->
 
         </div>
-
+</div>
+</div>
         <!--/.Mask-->
 
     <!--Main Navigation-->
@@ -217,8 +217,9 @@
                     <!--Grid column-->
                 </div>
                 <!--Grid row-->
+                </section>
                 </div>
-            </section>
+            
             <!--Section: Gallery-->
         </div>
 
