--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,7 +4,7 @@
         <div class="intro d-flex justify-content-center align-items-center" style="background-image: url('https://s3.amazonaws.com/ngpwebsite/automaticTrans.jpg'); background-repeat: no-repeat; background-size: cover;">
 
           <!-- Mask & flexbox options-->
-        <div class="mask flex-center rgba-black-strong">
+        <div class="mask rgba-black-strong">
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">All You Need to Get In Gear!</h2>
