Adjust metatags to improve SEO

--- a/app/views/parts/standardTrans.html.erb
+++ b/app/views/parts/standardTrans.html.erb
@@ -1,3 +1,11 @@
+<% content_for :head do %>
+  <title>Standard Transmissions Parts</title>
+  <meta name="description" content="If you need just a few parts and not an entire transmission, Nogalitos Gear Company has what you need in stock. When you need us to repair your standard transmission for you, there is no reason to go broke paying for it.">
+  <meta name="keywords" content="Standard Transmissions San Antonio, Transmissions San Antonio, Standard Transmissions">
+  <meta name="author" content="Nogalitos Gear Company">
+
+
+<% end %>
 <!--Main layout-->
 <main class="mt-5">
     <!--Section: Best Features-->
