--- a/app/views/parts/transferCase.html.erb
+++ b/app/views/parts/transferCase.html.erb
@@ -1,3 +1,11 @@
+<% content_for :head do %>
+  <title>Transfer Case Parts</title>
+  <meta name="description" content="All You Need to Get In Gear! Your One Stop Shop for Automatic Transmission, Standard Transmission, Transfer Case, Differential Parts, and More">
+  <meta name="keywords" content="Transfer Case San Antonio, Transfer Case Parts San Antonio, Transfer Case">
+  <meta name="author" content="Nogalitos Gear Company">
+
+
+<% end %>
 <!--Main layout-->
 <main class="mt-5">
     <!--Section: Best Features-->
