--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,13 @@
     <%= stylesheet_link_tag("styleNGPLanding") %>
         <!--Mask-->
+        <% content_for :head do %>
+  <title>Nogalitos Gear Company</title>
+  <meta name="description" content="All You Need to Get In Gear! Your One Stop Shop for Automatic Transmission, Standard Transmission, Transfer Case, Differential Parts, and More">
+  <meta name="keywords" content="Nogalitos Gear Company, Car Parts Supplier San Antonio, Auto Parts Supplier San Antonio, Car Parts San Antonio, Auto Parts San Antonio">
+  <meta name="author" content="Nogalitos Gear Company">
+
+
+<% end %>
         <div class="view" style="height: 100%">
         <div class="intro" style="background-image: url('https://s3.amazonaws.com/ngpwebsite/automaticTrans.jpg'); background-repeat: no-repeat; background-size: cover;">
 
