--- a/app/views/parts/automaticTrans.html.erb
+++ b/app/views/parts/automaticTrans.html.erb
@@ -1,3 +1,11 @@
+<% content_for :head do %>
+  <title>Automatic Transmissions Parts</title>
+  <meta name="description" content="You don’t have to worry about shopping around, just come straight to Nogalitos Gear Company. We provide you with quality transmission parts and won’t take advantage of you by hiking up the price. Get all our parts at competitive prices!">
+  <meta name="keywords" content="Automatic Transmissions San Antonio, Transmissions San Antonio, Automatic Transmissions">
+  <meta name="author" content="Nogalitos Gear Company">
+
+
+<% end %>
 <!--Main layout-->
 <main class="mt-5">
     <!--Section: Best Features-->
