Contact Form Fully Functional. Adjusted mdb javascript integration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,7 +117,7 @@
         var var_marker = new google.maps.Marker({
             position: var_location,
             map: var_map,
-            title: "Jugo Juicery"
+            title: "Nogalitos Gear Company"
         });
     }
 
