Adjusted buttons to link to pages

--- a/app/views/parts/differential.html.erb
+++ b/app/views/parts/differential.html.erb
@@ -79,7 +79,7 @@
                     <br>Bearings and seals
                     <br>Gear ratio’s from 2.73 to 7.00
                         </p>
-                    <a class="btn btn-primary btn-md">Contact Us</a>
+                    <%= link_to "Contact Us", new_contact_path, class: "btn btn-primary btn-md" %>
                 </div>
                 <!--Grid column-->
             </div>
