--- a/app/views/parts/toolsAndEquipment.html.erb
+++ b/app/views/parts/toolsAndEquipment.html.erb
@@ -79,7 +79,7 @@
                         <br>Speciality Tools
                         <br>Zamorano Specialty Tools
                          <br> And much more!</p>
-                    <a class="btn btn-primary btn-md">Contact Us</a>
+                    <%= link_to "Contact Us", new_contact_path, class: "btn btn-primary btn-md" %>
                 </div>
                 <!--Grid column-->
             </div>
