--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -106,7 +106,7 @@
       <!--Text-->
       <p class="card-text">Torque converters, flywheels, kits, hard parts, and more.</p>
       <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+      <%= link_to "Read More", automaticTransmission_path, class: "btn btn-light-blue btn-md" %>
 
     </div>
 
@@ -132,7 +132,7 @@
       <!--Text-->
       <p class="card-text">Standard clutch kits, gears, services and repairs.</p>
       <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+      <%= link_to "Read More", standardTransmission_path, class: "btn btn-light-blue btn-md" %>
 
     </div>
 
@@ -158,7 +158,7 @@
       <!--Text-->
       <p class="card-text">Transmission brakes, Billet shafts, Stall speed converters and more.</p>
       <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+      <%= link_to "Read More", performance_path, class: "btn btn-light-blue btn-md" %>
 
     </div>
 
@@ -193,7 +193,7 @@
       <!--Text-->
       <p class="card-text">Torque converters, flywheels, kits, hard parts, and more.</p>
       <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+      <%= link_to "Read More", transferCase_path, class: "btn btn-light-blue btn-md" %>
 
     </div>
 
@@ -219,7 +219,7 @@
       <!--Text-->
       <p class="card-text">Ring and pinion sets, and bearing kits.</p>
       <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+      <%= link_to "Read More", differential_path, class: "btn btn-light-blue btn-md" %>
 
     </div>
 
@@ -245,7 +245,7 @@
       <!--Text-->
       <p class="card-text">Transmission brakes, Billet shafts, Stall speed converters and more.</p>
       <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+      <%= link_to "Read More", toolsAndEquipment_path, class: "btn btn-light-blue btn-md" %>
 
     </div>
 
@@ -325,7 +325,7 @@
                         <p>Yukon is the number one leader in differential parts!</p>
                         <p>Precision of New Hampton is in our oppinon the best tourqe converters you can get!</p>
                         <p>Raybestos by far have the best powertrain products in the industry!</p>
-                        <a class="btn btn-primary btn-md">Read more</a>
+                        <%= link_to "Read More", suppliers_path, class: "btn btn-primary btn-md" %>
                     </div>
                     <!--Grid column-->
                 </div>
