--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -29,7 +29,7 @@
 <div class="md-form form-sm"> <i class="fa fa-file-text-o prefix grey-text"></i>
 <%= form.input_field :message, as: :text, placeholder: 'Message', input_html: { class: "md-textarea form-control form-control-sm", type: 'text',rows:"4", id: 'form7' } %>
 </div>
-<%= form.button :submit, class: 'btn btn-primary' %>
+<%= form.button :submit, "Send", class: 'btn btn-primary' %>
 <% end %>
                         <!-- Form contact -->
                     </div>
