--- a/app/views/parts/automaticTrans.html.erb
+++ b/app/views/parts/automaticTrans.html.erb
@@ -90,7 +90,7 @@
                         <br> Torque converters
                         <br> Overhaul Kits
                         <br> And much more!</p>
-                    <a class="btn btn-primary btn-md">Contact Us</a>
+                        <%= link_to "Contact Us", new_contact_path, class: "btn btn-primary btn-md" %>
                 </div>
                 <!--Grid column-->
             </div>
