--- a/app/views/parts/performance.html.erb
+++ b/app/views/parts/performance.html.erb
@@ -76,7 +76,7 @@
                         <br>Performance Planetary sets
                         <br>Red Eagle Racing clutches
                         <br> And much more!</p>
-                    <a class="btn btn-primary btn-md">Contact Us</a>
+                    <%= link_to "Contact Us", new_contact_path, class: "btn btn-primary btn-md" %>
                 </div>
                 <!--Grid column-->
             </div>
