--- a/app/views/parts/standardTrans.html.erb
+++ b/app/views/parts/standardTrans.html.erb
@@ -86,7 +86,7 @@
 				    <br>Bearings
 				    <br>And more!
                     </p>
-                    <a class="btn btn-primary btn-md">Contact Us</a>
+                    <%= link_to "Contact Us", new_contact_path, class: "btn btn-primary btn-md" %>
                 </div>
                 <!--Grid column-->
             </div>
