--- a/app/views/parts/transferCase.html.erb
+++ b/app/views/parts/transferCase.html.erb
@@ -82,7 +82,7 @@
                     <br>Seal Kits
                     <br>Transfer Case Hard Parts 
                     </p>
-                    <a class="btn btn-primary btn-md">Contact Us</a>
+                    <%= link_to "Contact Us", new_contact_path, class: "btn btn-primary btn-md" %>
                 </div>
                 <!--Grid column-->
             </div>
