--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -51,7 +51,7 @@ San Antonio, TX 78211 </p>
 M-F:
     8:00 am - 5:30 pm 
 Sat:
-    9:00 am - 1:00 pm <br>
+    Closed <br>
 Sun:
     Closed
 </p>
